syntax = "proto3";

package oauth2;
import "definitions/validate/Validate.proto";

option go_package = "github.com/yb2020/odoc-proto/gen/go/oauth2";



// @api_path: /api/oauth2/RSAKey
// @method: GET
// @content-type: application/json
// @summary: 获取RSA公钥
message GetRSAKeyRequest {}
message GetRSAKeyResponse {
  string publicKey = 1;
}

// @api_path: /api/oauth2/authorize/code
// @method: GET
// @content-type: application/json
// @summary: 获取授权码
message GetAuthCodeRequest {
  string clientId = 1 [(validate.rules).string = {
    min_len: 1
  }];
  string userId = 2 [(validate.rules).string = {
    min_len: 1
  }];
  string redirectUri = 3;
  string scope = 4;
}
message GetAuthCodeResponse {
  string code = 1;
}

// @api_path: /api/oauth2/authorize/sign_in
// @method: POST
// @content-type: application/json
// @summary: 登录/获取访问令牌
message SignInAuthCodeRequest {
  string username = 1 [(validate.rules).string = {
    min_len: 1
  }];  // 用户名
  string password = 2 [(validate.rules).string = {
    min_len: 1
  }];  // 密码
}
message SignInAuthCodeResponse {
  string accessToken = 1;                      // 访问令牌
  string refreshToken = 2;                     // 刷新令牌
  uint64 expiresAt = 3;     // 过期时间
  uint64 expiresIn = 4;                         // 过期时间（秒）
}


// @api_path: /api/oauth2/authorize/refresh
// @method: GET
// @content-type: application/json
// @summary: 刷新令牌请求
message RefreshTokenRequest {
  string refresh_token = 1 [(validate.rules).string = {
    min_len: 1
  }];  // 刷新令牌
  string scope = 2;         // 设备信息
}

message RefreshTokenResponse {
  string accessToken = 1;                      // 访问令牌
  string refreshToken = 2;                     // 刷新令牌
  uint64 expiresAt = 3;     // 过期时间
  uint64 expiresIn = 4;                         // 过期时间（秒）
}

// @api_path: /api/oauth2/authorize/validate
// @method: POST
// @content-type: application/json
// @summary: 验证令牌
message ValidateRequest {
  string accessToken = 1 [(validate.rules).string = {
    min_len: 1
  }];  // 访问令牌
}
message ValidateResponse {
  bool valid = 1;  // 是否有效
}

// @api_path: /api/oauth2/authorize/sign_out
// @method: POST
// @content-type: application/json
// @summary: 登出/撤销访问令牌
message SignOutRequest {
}
message SignOutResponse {
}

// @api_path: /services/oauth2/authorize/token
// @method: POST
// @content-type: application/json
// @summary: 服务令牌请求
message ServiceTokenRequest {
  string serviceId = 1 [(validate.rules).string = {
    min_len: 1
  }];
  string serviceName = 2 [(validate.rules).string = {
    min_len: 1
  }];
  string secret = 3 [(validate.rules).string = {
    min_len: 1
  }];
}
message ServiceTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
  uint64 expiresAt = 3;     // 过期时间
  uint64 expiresIn = 4;     // 过期时间（秒）
}

